Fixed bug with navbar going behind the content

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -30,7 +30,7 @@ nav {
     background-color: rgba(0,0,0,0.7);
     position: absolute;
     top: 4em;
-    z-index: 0;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
